added overall-lootfilter, updated config styles

--- a/lootfilters/config/styles.cfg
+++ b/lootfilters/config/styles.cfg
@@ -1,4 +1,23 @@
-style-orb-divine:
+style-base-craft-unique:
+SetBorderColor 255 128 200
+SetBackgroundColor 63 63 63 222
+PlayEffect Orange Temp
+PlayAlertSound 12 300
+MinimapIcon 1 Orange Square
+
+style-bg-translucent:
+SetBackgroundColor 0 0 0 210
+
+style-orb-annul:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 150
+PlayEffect White
+MinimapIcon 1 Orange Circle
+SetFontSize 40
+
+style-orb-div:
 SetTextColor 255 0 0 255
 SetBorderColor 255 0 0 255
 SetBackgroundColor 255 255 255 255
@@ -7,7 +26,7 @@ PlayEffect Red
 MinimapIcon 0 Red Star
 SetFontSize 45
 
-style-orb-divine-purple:
+style-orb-div-purple:
 SetTextColor 255 0 0 255
 SetBorderColor 255 0 0 255
 SetBackgroundColor 255 255 255 255
@@ -15,15 +34,6 @@ PlayAlertSound 6 300
 PlayEffect Purple
 MinimapIcon 0 Purple Star
 SetFontSize 45
-
-style-orb-annulment:
-SetTextColor 255 255 255 255
-SetBorderColor 255 255 255 255
-SetBackgroundColor 240 90 35 200
-PlayAlertSound 1 150
-PlayEffect White
-MinimapIcon 1 Orange Circle
-SetFontSize 40
 
 style-orb-fracturing:
 SetTextColor 132 229 255
@@ -34,5 +44,262 @@ PlayEffect White
 MinimapIcon 1 Cyan Diamond
 SetFontSize 40
 
-style-bg-translucent:
+style-orb-chance:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 150
+MinimapIcon 1 Orange Circle
+PlayEffect White
+
+style-orb-chaos:
+SetTextColor 207 130 255
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Circle
+SetFontSize 40
+
+style-orb-exalt:
+SetTextColor 255 225 200
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Circle
+SetFontSize 40
+
+style-orb-alch:
+SetTextColor 130 255 157
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Circle
+SetFontSize 40
+
+style-orb-vaal:
+SetTextColor 255 158 132
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Circle
+SetFontSize 40
+
+style-orb-regal:
+SetTextColor 255 207 132
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Circle
+SetFontSize 40
+
+style-orb-regal-mini:
+SetTextColor 255 207 132
+SetBorderColor 255 207 132
+SetBackgroundColor 76 51 12 200
+PlayEffect White
+MinimapIcon 1 White Circle
+
+style-orb-cheap:
+SetTextColor 255 207 132
+SetBorderColor 255 207 132
 SetBackgroundColor 0 0 0 210
+MinimapIcon 2 Grey Circle
+
+style-orb-cheap-large:
+SetTextColor 255 207 132
+SetBorderColor 255 207 132
+SetBackgroundColor 0 0 0 210
+MinimapIcon 2 Grey Circle
+
+style-uniq-crux-tier-s:
+SetBorderColor 255 128 200
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 7 300
+PlayEffect Pink
+MinimapIcon 1 Pink Star
+SetFontSize 40
+
+style-uniq-crux-tier-a:
+SetBackgroundColor 0 0 0 210
+SetBorderColor 255 255 255 255
+PlayEffect White
+MinimapIcon 2 Brown Star
+PlayAlertSound 3 300
+
+style-uniq-tier-a:
+SetBackgroundColor 0 0 0 210
+SetBorderColor 255 140 0 255
+PlayEffect Brown
+MinimapIcon 2 Brown Star
+PlayAlertSound 3 300
+
+style-eq-endgame:
+SetBorderColor 95 0 160
+SetBackgroundColor 0 0 0 210
+PlayEffect White Temp
+MinimapIcon 1 Purple Circle
+PlayAlertSound 16 300
+
+style-eq-tier-a:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 150
+PlayEffect White
+MinimapIcon 1 White Square
+SetFontSize 40
+
+style-eq-tier-b:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 150
+PlayEffect White
+MinimapIcon 1 White Square
+
+style-eq-quality:
+SetBorderColor 200 200 200
+SetBackgroundColor 63 63 63 222
+PlayEffect Grey
+MinimapIcon 1 Grey Square
+
+style-charm-quality:
+SetBackgroundColor 63 63 63 222
+SetBorderColor 255 255 255 150
+SetTextColor 0 240 190
+PlayEffect Cyan Temp
+MinimapIcon 1 Grey Square
+
+style-rune:
+SetTextColor 0 240 190
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 2 100
+PlayEffect Cyan Temp
+MinimapIcon 2 Cyan Circle
+
+style-rune-large:
+SetTextColor 0 240 190
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 2 100
+PlayEffect Cyan Temp
+MinimapIcon 2 Cyan Circle
+SetFontSize 40
+
+style-soulcore:
+SetTextColor 0 240 190
+SetBorderColor 0 240 190
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 2 300
+PlayEffect Cyan
+MinimapIcon 0 Cyan Diamond
+SetFontSize 40
+
+style-mapfragment:
+SetTextColor 255 205 113
+SetBorderColor 255 207 255
+SetBackgroundColor 65 20 80 200
+PlayAlertSound 2 300
+MinimapIcon 1 White Square
+SetFontSize 40
+
+style-mapfragment-high:
+SetTextColor 255 205 113
+SetBorderColor 255 140 0 255
+SetBackgroundColor 65 20 80 200
+PlayAlertSound 2 300
+MinimapIcon 1 Orange Square
+SetFontSize 40
+
+style-gold:
+SetTextColor 180 180 180
+SetBackgroundColor 0 0 0 128
+
+style-skillgem:
+SetTextColor 20 240 240
+SetBorderColor 20 240 240
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 2 300
+MinimapIcon 1 Cyan Triangle
+PlayEffect Cyan
+
+style-spiritgem:
+SetTextColor 140 140 140
+SetBorderColor 20 240 240
+SetBackgroundColor 0 0 0 220
+PlayAlertSound 2 300
+PlayEffect Grey
+MinimapIcon 1 Grey Triangle
+
+style-supportgem:
+SetTextColor 255 255 255
+SetBorderColor 20 240 240
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 2 300
+PlayEffect White
+MinimapIcon 1 White Triangle
+
+style-supportgem-high:
+SetTextColor 255 255 255
+SetBorderColor 20 240 240
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 3 300
+PlayEffect Brown
+MinimapIcon 1 Brown Diamond
+SetFontSize 40
+
+style-jewel-emerald:
+SetTextColor 255 207 132
+SetBackgroundColor 32 82 54 200
+SetFontSize 40
+
+style-jewel-ruby:
+SetTextColor 255 207 132
+SetBackgroundColor 124 25 22 200
+SetFontSize 40
+
+style-jewel-sapphire:
+SetTextColor 255 207 132
+SetBackgroundColor 9 30 56 200
+SetFontSize 40
+
+style-jewel-diamond:
+SetTextColor 255 207 132
+SetBackgroundColor 122 122 122 200
+SetFontSize 40
+
+style-talisman:
+SetTextColor 104 238 170
+SetBackgroundColor 0 0 0 210
+PlayAlertSound 12 200
+PlayEffect Cyan
+MinimapIcon 1 Cyan Circle
+SetFontSize 40
+
+style-abyss-craft:
+SetTextColor 169 208 56
+SetBorderColor 255 207 132
+SetBackgroundColor 16 82 16 200
+MinimapIcon 1 Green Circle
+PlayAlertSound 2 300
+
+style-abyss-socket:
+SetTextColor 47 191 78
+SetBackgroundColor 43 61 30 200
+PlayAlertSound 2 200
+PlayEffect Green
+MinimapIcon 1 Green Circle
+SetFontSize 40
+
+style-item-unknown:
+SetTextColor 255 207 132
+SetBorderColor 255 207 132
+SetBackgroundColor 222 102 204
+PlayAlertSound 2 300
+PlayEffect Pink
+MinimapIcon 1 Pink Circle
+SetFontSize 40
