fixes for lootfilter generator: atlas maps t15+

--- a/lootfilters/config/styles.cfg
+++ b/lootfilters/config/styles.cfg
@@ -1,12 +1,12 @@
+style-bg-translucent:
+SetBackgroundColor 0 0 0 210
+
 style-base-craft-unique:
 SetBorderColor 255 128 200
 SetBackgroundColor 63 63 63 222
 PlayEffect Orange Temp
 PlayAlertSound 12 300
 MinimapIcon 1 Orange Square
-
-style-bg-translucent:
-SetBackgroundColor 0 0 0 210
 
 style-orb-annul:
 SetTextColor 255 255 255 255
@@ -115,6 +115,7 @@ SetTextColor 255 207 132
 SetBorderColor 255 207 132
 SetBackgroundColor 0 0 0 210
 MinimapIcon 2 Grey Circle
+SetFontSize 40
 
 style-uniq-crux-tier-s:
 SetBorderColor 255 128 200
@@ -168,10 +169,16 @@ SetBackgroundColor 63 63 63 222
 PlayEffect Grey
 MinimapIcon 1 Grey Square
 
+style-charm:
+SetTextColor 0 240 190
+SetBackgroundColor 0 0 0 210
+PlayEffect Cyan Temp
+
 style-charm-quality:
 SetBackgroundColor 63 63 63 222
 SetBorderColor 255 255 255 150
 SetTextColor 0 240 190
+PlayAlertSound 2 100
 PlayEffect Cyan Temp
 MinimapIcon 1 Grey Square
 
