pre-patch v0.4.0 preparation

--- a/lootfilters/config/styles.cfg
+++ b/lootfilters/config/styles.cfg
@@ -279,7 +279,7 @@ SetTextColor 255 207 132
 SetBackgroundColor 122 122 122 200
 SetFontSize 40
 
-style-talisman:
+style-idol:
 SetTextColor 104 238 170
 SetBackgroundColor 0 0 0 210
 PlayAlertSound 12 200
@@ -300,6 +300,16 @@ SetBackgroundColor 43 61 30 200
 PlayAlertSound 2 200
 PlayEffect Green
 MinimapIcon 1 Green Circle
+SetFontSize 40
+
+style-vaal-socket:
+SetTextColor 255 255 255
+SetBackgroundColor 124 25 22 200
+SetBorderColor 77 27 27
+SetFontSize 40
+PlayAlertSound 2 200
+PlayEffect Red Temp
+MinimapIcon 1 Red Circle
 SetFontSize 40
 
 style-item-unknown:
