unification of styles for div-styles

--- a/lootfilters/config/styles.cfg
+++ b/lootfilters/config/styles.cfg
@@ -17,6 +17,23 @@ PlayEffect White
 MinimapIcon 1 Orange Circle
 SetFontSize 40
 
+style-orb-annul-max:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 100
+PlayEffect Orange
+MinimapIcon 1 Orange Square
+SetFontSize 40
+
+style-orb-annul-min:
+SetTextColor 255 255 255 255
+SetBorderColor 255 255 255 255
+SetBackgroundColor 240 90 35 200
+PlayAlertSound 1 100
+MinimapIcon 1 Orange Circle
+PlayEffect White
+
 style-orb-div:
 SetTextColor 255 0 0 255
 SetBorderColor 255 0 0 255
@@ -43,14 +60,6 @@ PlayAlertSound 2 300
 PlayEffect White
 MinimapIcon 1 Cyan Diamond
 SetFontSize 40
-
-style-orb-chance:
-SetTextColor 255 255 255 255
-SetBorderColor 255 255 255 255
-SetBackgroundColor 240 90 35 200
-PlayAlertSound 1 100
-MinimapIcon 1 Orange Circle
-PlayEffect White
 
 style-orb-chaos:
 SetTextColor 207 130 255
