minor update for league-vaal-styles

--- a/lootfilters/config/styles.cfg
+++ b/lootfilters/config/styles.cfg
@@ -311,8 +311,8 @@ PlayEffect Green
 MinimapIcon 1 Green Circle
 SetFontSize 40
 
-style-vaal-socket:
-SetTextColor 255 255 255
+style-league-vaal:
+SetTextColor 255 207 132
 SetBackgroundColor 124 25 22 200
 SetBorderColor 77 27 27
 SetFontSize 40
